--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "oxfmt": "latest",
     "oxlint": "latest",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   },
   "trustedDependencies": [
