Add typecheck, CI workflow, and verification instructions
Add tsc --noEmit as a typecheck script and include it in the check
command alongside oxlint (with --deny-warnings) and oxfmt. Create a
GitHub Actions CI workflow that runs lint, format, typecheck, and build
on every PR and push to main. Document verification steps in CLAUDE.md.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:fix": "oxlint --fix",
     "fmt": "oxfmt --write .",
     "fmt:check": "oxfmt --check .",
-    "check": "oxlint && oxfmt --check ."
+    "typecheck": "tsc --noEmit",
+    "check": "oxlint --deny-warnings && oxfmt --check . && tsc --noEmit"
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
